--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     margin: 0;
 }
 body {
+    font-size: 70px;
     justify-content: center;
     align-items: center;
     display: flex;
@@ -11,8 +12,10 @@ body {
 }
 a {
     position: relative;
-    letter-spacing: 4px;
-    padding: 20px 40px;
+    letter-spacing: 5px;
+    padding: 60px 80px;
+    padding-left: 100px;
+    padding-right: 100px;
     background: orange;
     color: #fff;
     text-decoration: none;
@@ -20,7 +23,7 @@ a {
     font-family: sans-serif;
     transform-style: preserve-3d;
     transition: ease-in-out 2s;
-    border-radius: 60px;
+    border-radius: 80px;
 
 }
 a:hover {
@@ -41,7 +44,7 @@ a::after {
     right: 6px;
     bottom: 4px;
     border: 2px solid #fff;
-    border-radius: 60px;
+    border-radius: 80px;
     transform-style: preserve-3d;
     transform: perspective(500px) translateZ(15px);
 }
@@ -53,7 +56,7 @@ a::before {
     right: 6px;
     bottom: 4px;
     border: 2px solid #fff;
-    border-radius: 60px;
+    border-radius: 80px;
     transform-style: preserve-3d;
     transform: perspective(500px) translateZ(-15px);
 }
